# dag-workflow-engine

./: .gitignore  .pre-commit-config.yaml  DESIGN.md  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile  entrypoint.sh
src/libs/dag-engine/: README.md  pyproject.toml
src/libs/dag-engine/src/dag_engine/: main.py
src/libs/dag-engine/src/dag_engine/core/: __init__.py  constants.py  context.py  entities.py  exceptions.py  handlers.py  main.py  manager.py  orchestrator.py  schemas.py  services.py  templates.py  timeout_monitor.py  worker.py  workflow.py
src/libs/dag-engine/src/dag_engine/event_sourcing/: __init__.py  constants.py  schemas.py
src/libs/dag-engine/src/dag_engine/event_store/: __init__.py  local.py  protocols.py  redis.py
src/libs/dag-engine/src/dag_engine/execution_store/: __init__.py  protocols.py  redis.py
src/libs/dag-engine/src/dag_engine/idempotency_store/: __init__.py  local.py  redis.py
src/libs/dag-engine/src/dag_engine/result_store/: __init__.py  protocol.py  redis.py
src/libs/dag-engine/src/dag_engine/serializer/: __init__.py  encoders.py  json.py  protocol.py
src/libs/dag-engine/src/dag_engine/store/: local.py  protocols.py  redis.py
src/libs/dag-engine/src/dag_engine/store/events/: __init__.py  local.py
src/libs/dag-engine/src/dag_engine/store/execution/: __init__.py  protocols.py  redis.py
src/libs/dag-engine/src/dag_engine/store/idempotency/: protocols.py  redis.py
src/libs/dag-engine/src/dag_engine/store/results/: __init__.py  protocol.py  redis.py
src/libs/dag-engine/src/dag_engine/transport/: __init__.py  local.py  messages.py  protocols.py  redis.py
src/libs/dag-engine/tests/: conftest.py  test_handler_registry.py  test_manager.py  test_orchestrator.py  test_template_resolver.py  test_timeout_monitor.py  test_workflow.py  test_workflow_json_encoder.py  test_workflow_worker.py
src/libs/dag-engine/tests/serializer/: test_json_result_serializer.py  test_workflow_json_encoder.py
src/libs/dag-engine/tests/transport/: test_inmemory_transport.py  test_redis_transport.py
src/services/dag-service/: README.md  pyproject.toml
src/services/dag-service/src/dag_service/: __init__.py  app.py  cli.py  config.py  handlers.py  ioc.py  server.py  store.py
src/services/dag-service/src/dag_service/routes/: v1.py
src/services/dag-service/tests/: conftest.py  test_api_v1.py
src/services/dag-web-api/: pyproject.toml
testflows/: scenario_a.json  scenario_b.json  scenario_c.json
