[project]
name = "dag-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tauassar Tatiyev", email = "tatiyev.tauassar@gmail.com" }
]
requires-python = "==3.13.*"

dependencies = [
    "pydantic>=2.11.3",
    "sqlalchemy>=2.0.40",
    "alembic>=1.15.2",
    "aiokafka>=0.12.0",
]

[dependency-groups]
types = ["mypy>=1.15.0"]
test = [
    "pytest~=8.4.2",
    "pytest-asyncio~=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/event_sourcing"]
