[project]
name = "dag-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tauassar Tatiyev", email = "tatiyev.tauassar@gmail.com" }
]
requires-python = "==3.13.*"

dependencies = [
    "pydantic>=2.11.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dag_engine"]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.23.8",
]
