[project]
name = "dag-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.9.1",
    "pydantic>=2.11.3",
    "uvicorn[standard]>=0.22.0",
    "sqlalchemy[asyncio,postgresql-psycopgbinary]>=2.0.41",
    "asyncpg>=0.30.0",
    "dependency-injector>=4.46.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
dag-service = "dag_service.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dag_service"]
